Fix T43669: Grease Pencil visibility toggle not working in Outliner